ArgoCD/apps/traefik/prom-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web  # HTTP port
  routes:
    - match: PathPrefix(`/prometheus`)  # Match all requests to the root path
      kind: Rule
      services:
        - name: prometheus-operator-kube-p-prometheus
          port: 9090  # The port on which Prometheus is exposed inside the cluster
